# school21-fractol

./: .gitignore  1  CMakeLists.txt  Makefile  fractol  fractol.c  fractol.h  fractol_burningship.c  fractol_chameleon.c  fractol_julia.c  fractol_mandelbrot.c  functions_change_color.c  functions_key_code.c  functions_malloc.c  functions_support.c  keycode.h  main.c  mandelbrot.c
libftprintf/: ft_printf.h
libftprintf/libft/: get_next_line.c  get_next_line.h  libft.h
