cmake_minimum_required(VERSION 3.4)
project(fractol C)

set(CMAKE_C_STANDARD 99)

find_library(libftprintf libftprintf/libft)

add_executable(fractol fractol.c
        fractol.h
        libftprintf/ft_printf.h
        libftprintf/libft/libft.h
        libftprintf/libft/get_next_line.h
        libftprintf/analise.c
        libftprintf/analise_char.c
        libftprintf/analise_float_and_l.c
        libftprintf/analise_float_upl.c
        libftprintf/analise_h_hh_unsigned_integer.c
        libftprintf/analise_h_hh_upx.c
        libftprintf/analise_h_hh_x.c
        libftprintf/analise_h_o.c
        libftprintf/analise_hh_o.c
        libftprintf/analise_j.c
        libftprintf/analise_l_ll_u.c
        libftprintf/analise_l_ll_upx.c
        libftprintf/analise_l_ll_x.c
        libftprintf/analise_l_o.c
        libftprintf/analise_ll_o.c
        libftprintf/analise_pointer.c
        libftprintf/analise_procent.c
        libftprintf/analise_str.c
        libftprintf/analise_three.c
        libftprintf/analise_two.c
        libftprintf/analise_u.c
        libftprintf/analise_upx.c
        libftprintf/analise_x.c
        libftprintf/analyse_integer.c
        libftprintf/analyse_o.c
        libftprintf/check_flags_di.c
        libftprintf/check_flags_upxxuo.c
        libftprintf/check_flags_upxxuo2.c
        libftprintf/create_struct.c
        libftprintf/float_help.c
        libftprintf/float_help_part_two.c
        libftprintf/float_help_part_two_upl.c
        libftprintf/float_help_upl.c
        libftprintf/ft_litoa.c
        libftprintf/ft_llitoa.c
        libftprintf/ft_printf.c
        libftprintf/ft_printf.h
        libftprintf/ft_printf_three.c
        libftprintf/ft_printf_two.c
        libftprintf/ft_width_for_int.c
        libftprintf/new.c
        libftprintf/print_null_i.c
        libftprintf/print_pointer.c
        libftprintf/print_string.c
        libftprintf/libft/ft_atoi_hex.c
        libftprintf/libft/ft_atoi.c
        libftprintf/libft/ft_atoi_error.c
        libftprintf/libft/ft_bzero.c
        libftprintf/libft/ft_copyuntil.c
        libftprintf/libft/ft_isalnum.c
        libftprintf/libft/ft_isalpha.c
        libftprintf/libft/ft_isascii.c
        libftprintf/libft/ft_isdigit.c
        libftprintf/libft/ft_isprint.c
        libftprintf/libft/ft_itoa.c
        libftprintf/libft/ft_lstadd.c
        libftprintf/libft/ft_lstdel.c
        libftprintf/libft/ft_lstdelone.c
        libftprintf/libft/ft_lstiter.c
        libftprintf/libft/ft_lstmap.c
        libftprintf/libft/ft_lstnew.c
        libftprintf/libft/ft_memalloc.c
        libftprintf/libft/ft_memccpy.c
        libftprintf/libft/ft_memchr.c
        libftprintf/libft/ft_memcmp.c
        libftprintf/libft/ft_memcpy.c
        libftprintf/libft/ft_memdel.c
        libftprintf/libft/ft_memmove.c
        libftprintf/libft/ft_memset.c
        libftprintf/libft/ft_power.c
        libftprintf/libft/ft_putchar.c
        libftprintf/libft/ft_putchar_fd.c
        libftprintf/libft/ft_putendl.c
        libftprintf/libft/ft_putendl_fd.c
        libftprintf/libft/ft_putnbr.c
        libftprintf/libft/ft_putnbr_fd.c
        libftprintf/libft/ft_putstr.c
        libftprintf/libft/ft_putstr_fd.c
        libftprintf/libft/ft_strcat.c
        libftprintf/libft/ft_strchr.c
        libftprintf/libft/ft_strclr.c
        libftprintf/libft/ft_strcmp.c
        libftprintf/libft/ft_strcpy.c
        libftprintf/libft/ft_strdel.c
        libftprintf/libft/ft_strdup.c
        libftprintf/libft/ft_strequ.c
        libftprintf/libft/ft_striter.c
        libftprintf/libft/ft_striteri.c
        libftprintf/libft/ft_strjoin.c
        libftprintf/libft/ft_strjoinch.c
        libftprintf/libft/ft_strlcat.c
        libftprintf/libft/ft_strlen.c
        libftprintf/libft/ft_strmap.c
        libftprintf/libft/ft_strmapi.c
        libftprintf/libft/ft_strncat.c
        libftprintf/libft/ft_strncmp.c
        libftprintf/libft/ft_strncpy.c
        libftprintf/libft/ft_strnequ.c
        libftprintf/libft/ft_strnew.c
        libftprintf/libft/ft_strnstr.c
        libftprintf/libft/ft_strrchr.c
        libftprintf/libft/ft_strsplit.c
        libftprintf/libft/ft_strstr.c
        libftprintf/libft/ft_strsub.c
        libftprintf/libft/ft_strtrim.c
        libftprintf/libft/ft_tolower.c
        libftprintf/libft/ft_toupper.c functions_malloc.c functions_support.c mandelbrot.c)